# ai-hedge-fund

./: .env.example  .gitignore  .mailmap  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/: ci-cd-audit-report.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-tech-debt.yml  03-dead-code.yml  04-security.yml  05-anomaly.yml  06-architecture.yml  07-test-gap.yml
.github/workflows/: test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: README.md
app/backend/: README.md  auth.py  config.py  encryption.py  main.py
app/frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
docker/: docker-compose.yml
docs/hybrid-decision-engine/: PRD.md  README.md  agent-developer-prompt.md  architecture.md  implementation-roadmap.md  module-contracts.md  testing-and-validation.md
docs2/: flagprompt.md
memory/context/: mission-brief.md
memory/discoveries/: code-quality-audit-2026-05-22.md
memory/journal/: 2026-05-22--ci-fix.md  2026-05-22--code-quality-audit-start.md  2026-05-22--doctrine-session-fixes.md
memory/reports/: docs-knowledge-transfer-audit-2026-05-21.md  session-2026-05-21--complete-github-issues.md  session-2026-05-22--code-quality-audit.md  session-2026-05-22--doctrine-agent-bug-fixes.md
src/: config.py  main.py
src/agents/: aswath_damodaran.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  consensus.py  debate.py  fundamentals.py  growth_agent.py  meta_labeler.py  michael_burry.py  mohnish_pabrai.py  news_sentiment.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  psychological_guardrail.py  rakesh_jhunjhunwala.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/backtesting/: cli.py  controller.py  engine.py  metrics.py  output.py  portfolio.py
src/cli/: input.py
src/data/: cache.py
src/graph/: state.py
src/llm/: models.py
src/reflection/: recorder.py
src/regime/: classifier.py  selector.py
src/risk/: __init__.py  disagreement.py  drawdown_guardrail.py  sizing.py
src/schemas/: hybrid.py
src/tools/: api.py
src/utils/: analysts.py  api_key.py  display.py  docker.py  llm.py  ollama.py  parsing.py  progress.py
tests/: test_adaptive_selector.py  test_analyst_ordering.py  test_api_rate_limiting.py  test_graph_state.py  test_no_bare_except.py  test_no_prints_in_backend.py  test_parsing.py  test_reflection_recorder.py  test_regime_classifier.py  test_settings_centralization.py  test_utils_api_key.py
tests/agents/: conftest.py  test_all_agents.py  test_confidence_bounds.py  test_consensus.py  test_debate.py  test_meta_labeler.py  test_news_sentiment_prompt.py  test_portfolio_manager_hybrid.py  test_psychological_guardrail.py  test_risk_manager_hybrid.py  test_technicals_adx.py  test_warren_buffett_fixes.py
tests/backend/: conftest.py  test_api_key_encryption.py  test_api_key_startup.py  test_app_metadata.py  test_auth.py  test_backtest_service_async_prefetch.py  test_db_connection.py  test_db_models.py  test_flow_run_service.py  test_global_exception_handler.py  test_graph_imports.py  test_graph_service.py  test_main_cors.py  test_no_deprecated_apis.py  test_rate_limiting.py  test_repositories.py  test_routes_api_keys.py  test_routes_db_session.py  test_routes_flow_runs_async.py  test_routes_flows.py  test_routes_graph_validation.py  test_routes_health.py  test_routes_hedge_fund.py  test_routes_hedge_fund_request_sanitization.py  test_routes_ollama_cors.py  test_routes_ollama_validation.py  test_routes_storage.py  test_schemas.py  test_ticker_validation.py
tests/backtesting/: test_benchmarks.py  test_controller.py  test_execution.py  test_incremental_metrics.py  test_metrics.py  test_prefetch_concurrent.py  test_results.py
tests/cli/: test_input.py
tests/data/: test_api_error_handling.py  test_cache.py  test_models.py
tests/llm/: test_call_llm_json_mode.py  test_call_llm_request_context.py  test_models.py  test_ollama.py
tests/risk/: test_disagreement.py  test_drawdown_guardrail.py  test_sizing.py
tests/schemas/: test_hybrid.py
tests/tools/: test_api_data.py  test_api_query_params.py  test_cache_key_fix.py  (+1 more)
(+129 files in other folders)
