[tool.poetry]
name = "ai-hedge-fund"
version = "1.0.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["JackSmack1971 <bret821@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.30"
langchain-anthropic = "^0.3.5"
langchain-groq = "^0.3.8"
langchain-openai = "^0.3.5"
langchain-deepseek = "^0.1.2"
langchain-ollama = "^0.3.6"
langgraph = "^0.3.0"
pandas = "^2.1.0"
numpy = ">=2.0,<3"
python-dotenv = "^1.0.0"
matplotlib = "^3.11.0"
tabulate = "^0.9.0"
colorama = "^0.4.6"
questionary = "^2.1.0"
rich = "^15.0.0"
langchain-google-genai = "^2.0.11"
# Backend dependencies
fastapi = {extras = ["standard"], version = "^0.139.0"}
fastapi-cli = "^0.0.24"
pydantic = "^2.4.2"
pydantic-settings = "^2.4.0"
httpx = "^0.28.1"
sqlalchemy = "^2.0.51"
alembic = "^1.18.4"
langchain-gigachat = "^0.3.12"
langchain-xai = "^0.2.5"
celery = {extras = ["redis"], version = "^5.4.0"}
cryptography = "^48.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1"
pytest-cov = ">=4.0"
pytest-asyncio = ">=1.4.0"
httpx = "^0.28.1"
black = "^26.5"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = ">=1.10"
bandit = ">=1.7"

[tool.pytest.ini_options]
# cov-fail-under is the single source of truth — do not duplicate in test.yml
# roadmap: raise to 70 once test coverage improves beyond current ~42%
addopts = "--cov=src --cov=app/backend --cov-report=term-missing --cov-report=xml --cov-fail-under=42"

[tool.coverage.run]
omit = [
    "tests/*",
    "src/utils/display.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
no_strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.poetry.scripts]
backtester = "src.backtesting.cli:main"
